==> tokai-student-rocket-project/H-58-Avionics/Projects/STM32duino/SensingModule/Adafruit_BNO055.cpp <==
#include "Arduino.h"
#include <limits.h>
#include <math.h>
#include "Adafruit_BNO055.h"

bool Adafruit_BNO055::write8(adafruit_bno055_reg_t reg, byte value) {
  Wire.beginTransmission(0x28);
  Wire.write((uint8_t)reg);
  Wire.write((uint8_t)value);
  Wire.endTransmission();
  return true;
}

byte Adafruit_BNO055::read8(adafruit_bno055_reg_t reg) {
  Wire.beginTransmission(0x28);
  Wire.write((uint8_t)reg);
  Wire.endTransmission();
  Wire.requestFrom(0x28, 1);
  return (byte)Wire.read();
}

bool Adafruit_BNO055::readLen(adafruit_bno055_reg_t reg, byte* buffer,
  uint8_t len) {
  Wire.beginTransmission(0x28);
  Wire.write((uint8_t)reg);
  Wire.endTransmission();
  Wire.requestFrom(0x28, len);
  for (uint8_t i = 0; i < len; i++) {
    buffer[i] = Wire.read();
  }

  return true;
}
