==> wbeebe/EspressifProjects/v4/esp32-c3-i2c-displays/main/Adafruit_BNO055.cpp <==
#include <limits.h>
#include <math.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_log.h"
#include "Adafruit_BNO055.hpp"

bool Adafruit_BNO055::write8(adafruit_bno055_reg_t reg, uint8_t value) {
  uint8_t buffer[2] = {(uint8_t)reg, (uint8_t)value};
  return write_data(address, buffer, sizeof(buffer)) == ESP_OK;
}

uint8_t Adafruit_BNO055::read8(adafruit_bno055_reg_t reg) {
  uint8_t buffer[1] = {reg};
  i2c_master_write_read_device(0,address,buffer,1,buffer,1,1000 / portTICK_RATE_MS);
  return buffer[0];
}

bool Adafruit_BNO055::readLen(adafruit_bno055_reg_t reg, uint8_t *buffer, uint8_t len) {
  uint8_t reg_buf[1] = {(uint8_t)reg};
  return read_register(address, reg, reg_buf, sizeof(reg_buf)) == ESP_OK;
}
